--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -1,11 +1,20 @@
-Documentation:
+Metrics/AbcSize:
+  Max: 25
+
+Metrics/MethodLength:
+  Max: 15
+
+Layout/LineLength:
+  Max: 100
+
+Style/Documentation:
   Enabled: false
 
-Naming/FileName:
+Style/Encoding:
+  Enabled: false
+
+Style/RescueModifier:
   Enabled: false
 
 Style/FrozenStringLiteralComment:
   Enabled: false
-
-Metrics/LineLength:
-  Max: 120
