--- a/javascript/package.json
+++ b/javascript/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-mocha": "^5.3.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "prettier": "^1.19.1"
   }
 }
