--- a/javascript/package.json
+++ b/javascript/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --exit",
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path .gitignore .",
+    "pretty": "prettier --parser babel --write '**/*.js'"
   },
   "author": "",
   "license": "ISC",
