--- a/javascript/package.json
+++ b/javascript/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --exit",
+    "mocha": "mocha ./test/**/*.mocha.js --exit",
+    "jest": "jest --testRegex '.jest.js$'",
     "lint": "eslint --ignore-path .gitignore .",
     "format": "prettier --parser babel --write '**/*.js'"
   },
@@ -17,6 +18,7 @@
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-mocha": "^5.3.0",
+    "jest": "^25.2.7",
     "mocha": "^6.1.4",
     "prettier": "^1.19.1"
   }
