--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -45,8 +45,7 @@
       "error",
       {
         "devDependencies": [
-          "**/*Test.js",
-          "**/seeds/*.js"
+          "**/*Test*.js"
         ]
       }
     ],
