--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,23 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "mocha": "mocha ./test/**/*.mocha.js --exit",
     "jest": "jest --testRegex '.jest.js$'",
     "lint": "eslint --ignore-path .gitignore .",
-    "format": "prettier --parser babel --write '**/*.js'"
+    "format": "prettier --parser babel --write '**/*.js'",
+    "upgradeAll": "ncu --upgrade && yarn install"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-chai-friendly": "^0.4.1",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-mocha": "^5.3.0",
-    "jest": "^25.2.7",
-    "mocha": "^6.1.4",
-    "prettier": "^1.19.1"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-chai-friendly": "^0.5.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-mocha": "^6.3.0",
+    "jest": "^25.3.0",
+    "mocha": "^7.1.1",
+    "npm-check-updates": "^4.1.2",
+    "prettier": "^2.0.4"
   }
 }
