--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -33,7 +33,7 @@
     "space-before-function-paren": [
       "error",
       {
-        "anonymous": "never",
+        "anonymous": "always",
         "named": "never",
         "asyncArrow": "always"
       }
