--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -8,7 +8,8 @@
   ],
   "env": {
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "jest": true
   },
   "rules": {
     "no-console": "off",
