--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -14,7 +14,7 @@
   ],
   "rules": {
     "chai-friendly/no-unused-expressions": 2,
-    "comma-dangle": "off",
+    "comma-dangle": 1,
     "func-names": "off",
     "import/no-dynamic-require": "off",
     "import/no-extraneous-dependencies": [
