Use babel to use es6 import feature

--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -8,6 +8,9 @@
   "extends": [
     "airbnb-base"
   ],
+  "globals": {
+    "BigInt": true
+  },
   "plugins": [
     "mocha",
     "chai-friendly"
