--- a/typescript/.eslintrc
+++ b/typescript/.eslintrc
@@ -16,7 +16,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -26,22 +26,22 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "@typescript-eslint/array-type": "off", // Styling not forced upon the student
+    "@typescript-eslint/array-type": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "warn", {
         "allowExpressions": false,
         "allowTypedFunctionExpressions": true,
         "allowHigherOrderFunctions": true
       }
-    ], // Prevent bugs
-    "@typescript-eslint/explicit-member-accessibility": "off", // Styling not forced upon the student
-    "@typescript-eslint/indent": "off", // Styling not forced upon the student
+    ],
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/indent": "off",
     "@typescript-eslint/no-inferrable-types": [
       "error", {
         "ignoreParameters": true
       }
     ],
-    "@typescript-eslint/member-delimiter-style": "off", // Styling not forced upon the student
+    "@typescript-eslint/member-delimiter-style": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-parameter-properties": [
       "warn", {
@@ -50,15 +50,15 @@
           "private readonly", "protected readonly", "public readonly"
         ]
       }
-    ], // only disallow readonly without an access modifier
-    "@typescript-eslint/no-unused-vars": "off", // Covered by the tsc compiler (noUnusedLocals)
+    ],
+    "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-use-before-define": [
       "error", {
         "functions": false,
         "typedefs": false
       }
-    ], // Prevent bugs, not styling
-    "semi": "off", // Always disable base-rule
-    "@typescript-eslint/semi": "off" // Styling not forced upon student
+    ],
+    "semi": "off",
+    "@typescript-eslint/semi": "off"
   }
 }
