--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "typescript-kata",
+  "name": "kata-ts",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "test": "jest --no-cache",
     "lint": "yarn lint:types && yarn lint:ci",
     "lint:types": "yarn tsc --noEmit -p .",
     "lint:ci": "eslint . --ext .tsx,.ts"
@@ -16,7 +15,7 @@
     "eslint": "^7.2.0",
     "eslint-plugin-import": "^2.21.1",
     "jest": "^26.0.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.8.4",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   }
