--- a/typescript/package.json
+++ b/typescript/package.json
@@ -19,5 +19,9 @@
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@types/heap": "^0.2.31",
+    "heap-js": "^2.2.0"
   }
 }
